--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
+    "axios": "^1.13.4",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "leaflet": "^1.7.1",
     "lucide-react": "^0.562.0",
     "materialize-css": "^1.0.0-rc.2",
@@ -27,7 +27,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
     "socket.io-client": "^4.8.3",
     "sweetalert": "^2.1.2",
