maintaining security by invalidating the session when the user no longer exists in the databas

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,1 @@
-# Using relative path for Netlify redirects (leavening empty for same-domain)
-REACT_APP_BASE_URL=
+REACT_APP_BASE_URL=https://emsbackend.racoai.io
